@@ -55,7 +55,6 @@ public class SettingsTest {
         conf.setProperty("connectionPool.maxWaitForConnection", 700);
         conf.setProperty("connectionPool.maxContentLength", 800);
         conf.setProperty("connectionPool.reconnectInterval", 900);
-        conf.setProperty("connectionPool.reconnectInitialDelay", 1000);
         conf.setProperty("connectionPool.resultIterationBatchSize", 1100);
         conf.setProperty("connectionPool.channelizer", "channelizer0");
 
@@ -81,7 +80,6 @@ public class SettingsTest {
         assertEquals(700, settings.connectionPool.maxWaitForConnection);
         assertEquals(800, settings.connectionPool.maxContentLength);
         assertEquals(900, settings.connectionPool.reconnectInterval);
-        assertEquals(1000, settings.connectionPool.reconnectInitialDelay);
         assertEquals(1100, settings.connectionPool.resultIterationBatchSize);
         assertEquals("channelizer0", settings.connectionPool.channelizer);
     }
